--- a/tapestryrepmerger.html
+++ b/tapestryrepmerger.html
@@ -7,8 +7,8 @@
         <title>Tapestry reporting</title>
         <!-- prettier-ignore -->
         <style>
-            .container,h1{display:-webkit-box;display:-ms-flexbox}.buttons,.container{-webkit-box-direction:normal}body{font-family:Verdana,sans-serif}p{margin:0;padding:0}h1{display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;text-decoration:underline;margin-bottom:80px}.container{display:flex;-webkit-box-orient:horizontal;-ms-flex-direction:row;flex-direction:row;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;margin:0 auto;width:100%;height:100%}.buttons{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-ms-flex-direction:column;flex-direction:column;margin:0 20px;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.report{font-weight:700;margin:.5em}.final,.sfmc{margin-top:30px}a.download:link,a.download:visited{display:inline-block;width:150px;text-align:center;padding:10px;color:#333;background-color:#fff;font-size:18px;border:1px solid red;text-decoration:none;-webkit-transition:.3s;-o-transition:.3s;transition:.3s;background:-o-linear-gradient(top,#f6f6f6 -50%,#dedede 110%);background:-webkit-gradient(linear,left top,left bottom,color-stop(-50%,#f6f6f6),color-stop(110%,#dedede));background:linear-gradient(top,#f6f6f6 -50%,#dedede 110%)}a.download:active,a.download:hover{color:red}#filesList{border:1px solid #000;padding:10px;min-height:150px;width:50%;font-size:14px}#filesList ol li{font-style:italic}
-        </style>
+                .container,h1{display:-webkit-box;display:-ms-flexbox}.buttons,.container{-webkit-box-direction:normal}.select{margin-bottom:30px}#sms{margin-left:30px}body{font-family:Verdana,sans-serif}p{margin:0;padding:0}h1{display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;text-decoration:underline;margin-bottom:80px}.container{display:flex;-webkit-box-orient:horizontal;-ms-flex-direction:row;flex-direction:row;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;margin:0 auto;width:100%;height:100%}.buttons{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-ms-flex-direction:column;flex-direction:column;margin:0 20px;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.report{font-weight:700;margin:.5em}.final,.sfmc,.attent{margin-top:30px}a.download:link,a.download:visited{display:inline-block;width:150px;text-align:center;padding:10px;color:#333;background-color:#fff;font-size:18px;border:1px solid red;text-decoration:none;-webkit-transition:.3s;-o-transition:.3s;transition:.3s;background:-o-linear-gradient(top,#f6f6f6 -50%,#dedede 110%);background:-webkit-gradient(linear,left top,left bottom,color-stop(-50%,#f6f6f6),color-stop(110%,#dedede));background:linear-gradient(top,#f6f6f6 -50%,#dedede 110%)}a.download:active,a.download:hover{color:red}#filesList{border:1px solid #000;padding:10px;min-height:150px;width:50%;font-size:14px}#filesList ol li{font-style:italic}
+            </style>
     </head>
 
     <body>
@@ -21,18 +21,47 @@
         <h1>Tapestry Reporting</h1>
         <div class="container">
             <div class="buttons">
+                <div class="select">
+                    <input
+                        type="radio"
+                        id="email"
+                        name="selection"
+                        value="email"
+                        checked
+                        onclick="showHide()"
+                    />
+                    <label for="email">Email</label>
+                    <input
+                        type="radio"
+                        id="sms"
+                        name="selection"
+                        value="sms"
+                        onclick="showHide()"
+                    />
+                    <label for="sms">SMS</label>
+                </div>
                 <p class="report ga">1. Upload GA report</p>
                 <input
                     type="file"
                     accept=".xl*"
                     onchange="readGAFile(this.files)"
                 />
-                <p class="report sfmc">2. Upload SFMC report</p>
-                <input
-                    type="file"
-                    accept=".xl*"
-                    onchange="readSFMCFile(this.files)"
-                />
+                <div id="sfmcDiv" style="display: block">
+                    <p class="report sfmc">2. Upload SFMC report</p>
+                    <input
+                        type="file"
+                        accept=".xl*"
+                        onchange="readSFMCFile(this.files)"
+                    />
+                </div>
+                <div id="attentDiv" style="display: none">
+                    <p class="report attent">2. Upload Attentive report</p>
+                    <input
+                        type="file"
+                        accept=".xl*"
+                        onchange="readAttentFile(this.files)"
+                    />
+                </div>
                 <p class="report final">3. Download the final report</p>
                 <a
                     class="download"
@@ -58,16 +87,18 @@
                 alert('Please select the correct file!');
             };
 
+            function showHide() {
+                const selectEmail = document.getElementById('email'),
+                    selectSMS = document.getElementById('sms'),
+                    sfmcDiv = document.getElementById('sfmcDiv'),
+                    attentDiv = document.getElementById('attentDiv');
+                sfmcDiv.style.display = email.checked ? 'block' : 'none';
+                attentDiv.style.display = email.checked ? 'none' : 'block';
+            }
+
             let fileData = {},
                 GAData = {},
-                SFMCData = {},
                 results = [];
-
-            function xlSerialToJsDate(date) {
-                return new Date(
-                    -2209075200000 + (date - (date < 61 ? 0 : 1)) * 86400000
-                );
-            }
 
             function readGAFile(file) {
                 results = [];
@@ -99,18 +130,21 @@
                                       workbook.Sheets['Dataset1']
                                   );
 
-                        for (let i = 0; i < xlRowObj.length; i++) {
-                            if (xlRowObj[i]['Transactions'] > 0) {
-                                fileData[i] = xlRowObj[i];
-                                conversions += fileData[i]['Transactions'];
-                                revenue += fileData[i]['Revenue'];
+                        if (document.getElementById('sms').checked) {
+                            fileData = xlRowObj;
+                            GAData = Object.assign({}, fileData);
+                        } else
+                            for (let j = 0; j < xlRowObj.length; j++) {
+                                if (xlRowObj[j]['Transactions'] > 0) {
+                                    fileData[j] = xlRowObj[j];
+                                    conversions += fileData[j]['Transactions'];
+                                    revenue += fileData[j]['Revenue'];
+                                }
+                                GAData = {
+                                    Conversions: conversions,
+                                    Revenue: revenue,
+                                };
                             }
-                        }
-
-                        GAData = {
-                            Conversions: conversions,
-                            Revenue: revenue,
-                        };
 
                         const li = document.createElement('li');
                         li.textContent = name;
@@ -121,6 +155,7 @@
             }
 
             function readSFMCFile(file) {
+                let SFMCData = {};
                 results = [];
                 let deliveries = 0,
                     opens = 0,
@@ -204,24 +239,102 @@
                             .split('/')
                             .join('-');
 
-                        if (dataLength > 1) {
-                            const lastIndex =
-                                fileData[0]['Email Content Name'].lastIndexOf(
-                                    '-'
-                                );
-                            fileData[0]['Email Content Name'] = fileData[0][
-                                'Email Content Name'
-                            ].substring(0, lastIndex);
-                            fileData[0]['Email Job ID'] = '';
+                        if (document.getElementById('email').checked) {
+                            if (dataLength > 1) {
+                                const lastIndex =
+                                    fileData[0][
+                                        'Email Content Name'
+                                    ].lastIndexOf('-');
+                                fileData[0]['Email Content Name'] = fileData[0][
+                                    'Email Content Name'
+                                ].substring(0, lastIndex);
+                                fileData[0]['Email Job ID'] = '';
+                            }
                         }
 
-                        resultObj = Object.assign(
+                        const resultObj = Object.assign(
                             fileData[0],
                             SFMCData,
                             GAData
                         );
 
                         results.push(resultObj);
+
+                        const li = document.createElement('li');
+                        li.textContent = name;
+                        ol.appendChild(li);
+                    };
+                    reader.readAsBinaryString(file[i]);
+                }
+            }
+
+            function readAttentFile(file) {
+                const attentData = Object.assign({}, fileData);
+                results = [];
+
+                const ol = document.querySelector('#filesList ol');
+                if (ol.childNodes.length > 1) {
+                    ol.innerHTML = '';
+                }
+                let campaignRow = [];
+                const dataLength = Object.keys(fileData).length;
+
+                for (let i = 0; i < file.length; i++) {
+                    const name = file[i].name,
+                        reader = new FileReader();
+
+                    reader.onload = function (e) {
+                        const data = e.target.result,
+                            workbook = XLSX.read(data, {
+                                type: 'binary',
+                            });
+
+                        const sheet = workbook.Sheets[workbook.SheetNames[0]],
+                            range = XLSX.utils.decode_range(sheet['!ref']);
+                        for (
+                            let rowNum = range.s.r;
+                            rowNum <= range.e.r;
+                            rowNum++
+                        ) {
+                            const secondCell =
+                                sheet[
+                                    XLSX.utils.encode_cell({ r: rowNum, c: 1 })
+                                ];
+
+                            for (let j = 0; j < dataLength; j++) {
+                                if (
+                                    secondCell &&
+                                    secondCell.v
+                                        .toLowerCase()
+                                        .includes(
+                                            attentData[j][
+                                                'Campaign'
+                                            ].toLowerCase()
+                                        )
+                                ) {
+                                    campaignRow[j] = rowNum;
+                                    const xlRowObj =
+                                        XLSX.utils.sheet_to_row_object_array(
+                                            workbook.Sheets[
+                                                workbook.SheetNames[0]
+                                            ]
+                                        );
+                                    fileData[j] = xlRowObj[campaignRow[j] - 1];
+
+                                    delete fileData[j]['Campaign Tags'];
+
+                                    fileData[j]['Conversions'] =
+                                        GAData[j]['Transactions'];
+                                    fileData[j]['Revenue ($)'] =
+                                        GAData[j]['Revenue'];
+
+                                    const resultObj = Object.assign(
+                                        fileData[j]
+                                    );
+                                    results.push(resultObj);
+                                }
+                            }
+                        }
 
                         const li = document.createElement('li');
                         li.textContent = name;
