--- a/tapestryrepmerger.html
+++ b/tapestryrepmerger.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Tapestry reporting</title>
+        <title>Tapestry Report Merger</title>
         <!-- prettier-ignore -->
         <style>
                 .container,h1{display:-webkit-box;display:-ms-flexbox}.buttons,.container{-webkit-box-direction:normal}.select{margin-bottom:30px}#sms{margin-left:30px}body{font-family:Verdana,sans-serif}p{margin:0;padding:0}h1{display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;text-decoration:underline;margin-bottom:80px}.container{display:flex;-webkit-box-orient:horizontal;-ms-flex-direction:row;flex-direction:row;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;margin:0 auto;width:100%;height:100%}.buttons{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-ms-flex-direction:column;flex-direction:column;margin:0 20px;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.report{font-weight:700;margin:.5em}.final,.sfmc,.attent{margin-top:30px}a.download:link,a.download:visited{display:inline-block;width:150px;text-align:center;padding:10px;color:#333;background-color:#fff;font-size:18px;border:1px solid red;text-decoration:none;-webkit-transition:.3s;-o-transition:.3s;transition:.3s;background:-o-linear-gradient(top,#f6f6f6 -50%,#dedede 110%);background:-webkit-gradient(linear,left top,left bottom,color-stop(-50%,#f6f6f6),color-stop(110%,#dedede));background:linear-gradient(top,#f6f6f6 -50%,#dedede 110%)}a.download:active,a.download:hover{color:red}#filesList{border:1px solid #000;padding:10px;min-height:150px;width:50%;font-size:14px}#filesList ol li{font-style:italic}
@@ -18,7 +18,7 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         ></script>
-        <h1>Tapestry Reporting</h1>
+        <h1>Tapestry Report Merger</h1>
         <div class="container">
             <div class="buttons">
                 <div class="select">
@@ -142,7 +142,11 @@
                                   );
 
                         if (document.getElementById('sms').checked) {
-                            fileData = xlRowObj;
+                            for (const key in xlRowObj) {
+                                if (xlRowObj[key]['Campaign']) {
+                                    fileData[key] = xlRowObj[key];
+                                }
+                            }
                             GAData = Object.assign({}, fileData);
                         } else
                             for (const key in xlRowObj) {
@@ -375,9 +379,9 @@
                                     secondCell.v
                                         .toLowerCase()
                                         .includes(
-                                            attentData[key][
-                                                'Campaign'
-                                            ].toLowerCase()
+                                            attentData[key]['Campaign']
+                                                .toLowerCase()
+                                                .replace(/\s+/g, '')
                                         )
                                 ) {
                                     campaignRow[key] = rowNum;
@@ -391,6 +395,29 @@
                                         xlRowObj[campaignRow[key] - 1];
 
                                     delete fileData[key]['Campaign Tags'];
+
+                                    const dataLength =
+                                        Object.keys(fileData).length;
+
+                                    if (
+                                        fileData[key]['Message Name']
+                                            .toLowerCase()
+                                            .includes('variant')
+                                    ) {
+                                        fileData[key]['Message Name'] =
+                                            fileData[key][
+                                                'Message Name'
+                                            ].replace(/variant/gi, ' VRNT');
+                                    } else if (
+                                        fileData[key]['Message Name']
+                                            .toLowerCase()
+                                            .includes('cntrl')
+                                    ) {
+                                        fileData[key]['Message Name'] =
+                                            fileData[key][
+                                                'Message Name'
+                                            ].replace(/cntrl/gi, ' CTRL');
+                                    }
 
                                     fileData[key]['Conversions'] =
                                         GAData[key]['Transactions'];
